<resources>
    <string name="app_name">CPS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CPS GROUPS</string>
    <string name="nav_header_subtitle">cpsgroups.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Create ID</string>
    <string name="menu_gallery">Assign Task</string>
    <string name="menu_task">Show Task</string>
    <string name="menu_slideshow">Inbox</string>
    <string name="menu_tools">Reports</string>
    <string name="menu_attendance">Show Attendance</string>
    <string name="menu_share">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="stamp">Stamp Duty</string>
    <string name="File_sro">SRO Receipt</string>
    <string name="field_task">Field Task</string>
    <string name="SRO_Task">SRO Task</string>

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="cancel">Cancel</string>

    <string name="button_text_stop">Punch OUT</string>
    <string name="message_worker_running">Location worker is going on...</string>
    <string name="message_worker_stopped">Location worker is stopped</string>
    <string name="log_for_running">You will be notified on every 15 minutes with new location.</string>
    <string name="log_for_stopped">Click on Start to get location on every 15 minutes</string>
    <string name="button_text_start">Punch IN</string>
    <string name="title_activity_tl_activity">TL_activity</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_do">Activity_do</string>
    <string name="title_activity_employee_activity">Employee_activity</string>

    <string-array name="role_names">
        <item>Select Role</item>
        <item>Team Leader</item>
        <item>Field Executive</item>
        <item>Data Entry Operator</item>
    </string-array>

    <string-array name="role_Code">
        <item>team_leader</item>
        <item>employee</item>
        <item>data_operator</item>
    </string-array>
</resources>
